# ESP32_IDF

./: BT_ACCEOTOR_DATA.c  Command line esp-idf.c  Command line esp-idf.txt  Drag to Install! Drag to your running Eclipse workspace. Requires Eclipse Marketplace Client.URL  ESP-IDF 4.4 CMD.lnk  Flashing ESPHome Firmware on ESP32 Microcontroller Windows workflow.URL  MAC_Commands_ESP-idf.c  esp-idfexamplesbluetoothbluedroidclassic_btbt_spp_acceptor at master · espressifesp-idf.URL  nopnop2002 (nopnop2002) _ Repositories.URL
Blink/: .cproject
ClientGET/: CMakeLists.txt  Makefile
Documents/: Get Started - ESP32 - — ESP-IDF Programming Guide latest documentation.URL
ESP32-OLED/: sdkconfig.old
ESP32-Termistor/: Analog to Digital Converter (ADC) - ESP32 - — ESP-IDF Programming Guide v4.4 documentation.URL
Myblink/: .cproject  .project  (+1 more)
wifibridgeesp32/main/: CMakeLists.txt  Kconfig.projbuild  main.c
wifibridgeesp32/main/inc/console/: dummy_console.h
wifibridgeesp32/main/inc/dummy/: dummyControl.h
wifibridgeesp32/main/inc/network/: cmd_wifi.h
wifibridgeesp32/main/inc/system/: cmd_nvs.h  cmd_system.h
wifibridgeesp32/main/inc/uart/: uartESP32.h
wifibridgeesp32/main/inc/wirelessCommunication/: cecoSocket.h  linkingManager.h
wifibridgeesp32/main/src/console/: dummy_console.c
wifibridgeesp32/main/src/dummy/: dummyControl.c
wifibridgeesp32/main/src/network/: cmd_wifi.c
wifibridgeesp32/main/src/system/: cmd_nvs.c  cmd_system.c
wifibridgeesp32/main/src/uart/: uartESP32.c
wifibridgeesp32/main/src/wirelessCommunication/: cecoSocket.c  linkingManager.c
(+66 files in other folders)
